--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <button onclick="hendelSearch ()" class="btn btn-neutral">Serch</button>
             </div>
 
+            <div id="spinner-loading" class=" hidden text-center ">
+                <span class=" loading loading-spinner text-info"></span>
+            </div>
+
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4">
                 <!-- <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
@@ -38,6 +42,10 @@
                         </div>
                     </div>
                 </div> -->
+
+            </div>
+            <div id="show-all-container" class="hidden">
+                <button onclick="" class="btn btn-neutral ">Show All</button>
 
             </div>
         </section>
